# pyhartig

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
data/: test_data.json
data/mappings/: expected_test_output.nt  test_mapping.rml
src/pyhartig/functions/: builtins.py
src/pyhartig/mapping/: MappingParser.py
src/pyhartig/operators/: ExtendOperator.py  Operator.py  SourceOperator.py  UnionOperator.py
src/pyhartig/operators/sources/: JsonSourceOperator.py
tests/: test_builtins.py  test_expressions.py  test_extend_operator.py  test_operators.py
tests/test_suite/: TEST_SUITE_README.md  conftest.py  run_all_tests.py  test_01_source_operators.py  test_02_extend_operators.py  test_03_operator_composition.py  test_04_complete_pipelines.py  test_05_builtin_functions.py  test_06_expression_system.py  test_07_library_integration.py  test_08_real_data_integration.py  test_09_union_operator.py  test_10_explain.py  test_11_explain_json.py  test_12_project_operator.py  test_13_equijoin_operator.py
tests/use_cases/github_gitlab/: fetch_github_issues.sh  fetch_gitlab_issues.sh  github_gitlab_test.py
tests/use_cases/github_gitlab/data/: fusion_mapping.ttl  github_issues.json  gitlab_issues.json
tests/use_cases/github_gitlab/output/: graph_20251126_132703.nt  results_20251126_132703.json  summary_20251126_132703.txt
